--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,8 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
-      - run: yarn test
+      # create docker image
+      - run:
+        name: Create docker image
+        command: |
+          docker build -t coba:v1 --build-arg SECRET=$SECRET .
