add docker layer in circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,8 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
+      - setup_remote_docker:
+          docker_layer_caching: true
       # create docker image
       - run:
         name: Create docker image
